<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.ProductDetailActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#1f2235"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_grey_sofa"
            android:contentDescription="@string/todo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/sofa_baleria"
            android:textColor="#2c3d4f"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/linear_curve_yellow_bg"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/_4_5"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:drawableRightCompat="@drawable/ic_baseline_star_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/_1034_ratings"
                android:textColor="#b8bcbd" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="#b8bcbd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/_104_reviews"
                android:textColor="#b8bcbd" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent"
                android:textColor="#596575"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_799"
                android:textColor="#596575"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.78"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="#596575"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.666" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:orientation="horizontal"
           >


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/refundable_discount"
                android:textColor="#b2b3b7"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1899"
                android:textColor="#b2b3b7"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/gradient_solid_bg"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewGift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gift"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_10_off_on_this_product_by_nusing_cupon_code_rent10"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewGift"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_offers"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewGift"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.344" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:text="Select Size"
                android:textColor="#6f7782"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center"
                    android:background="@drawable/gradient_circle_bg"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6x3"
                        android:textColor="#70c5e4"
                        android:textSize="@dimen/_10sdp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center"
                    android:background="@drawable/gradient_circle_bg"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6x3"
                        android:textColor="#70c5e4"
                        android:textSize="@dimen/_10sdp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center"
                    android:background="@drawable/gradient_circle_bg"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6x3"
                        android:textColor="#70c5e4"
                        android:textSize="@dimen/_10sdp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center"
                    android:background="@drawable/gradient_circle_bg"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6x3"
                        android:textColor="#70c5e4"
                        android:textSize="@dimen/_10sdp"
                        />
                </LinearLayout>




            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            >

            <TextView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:text="Select Tenure"
                android:textColor="#6f7782"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:background="@drawable/gradient_rec_stroke_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_7sdp"
                        android:text="Please Enter your tenure"
                        android:textColor="#70c5e4"
                        android:textSize="@dimen/_12sdp"
                        />







            </LinearLayout>

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/gradient_orignal_solid_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rent"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.036"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.369" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₹5039  for 36Month"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.038"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.697" />

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_35sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.902"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.588">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Add to cart"
                            android:textSize="@dimen/_12sdp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>